crates/oxc_react_compiler/tests/snapshots/reduce-reactive-deps__jump-unpoisoned__jump-target-within-scope-label.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/reduce-reactive-deps/jump-unpoisoned/jump-target-within-scope-label.ts
---
import { c as _c } from "react/compiler-runtime";
function useFoo(t0) {
	const $ = _c(3);
	const { input, cond } = t0;
	let x;
	if ($[0] !== cond || $[1] !== input.a.b) {
		x = [];
		bb0: if (cond) {
			break bb0;
		}
		x.push(input.a.b);
		$[0] = cond;
		$[1] = input.a.b;
		$[2] = x;
	} else {
		x = $[2];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: [{
		input: { a: { b: 2 } },
		cond: false
	}],
	sequentialRenders: [
		{
			input: { a: { b: 2 } },
			cond: false
		},
		{
			input: null,
			cond: false
		},
		{
			input: null,
			cond: true
		},
		{
			input: {},
			cond: false
		},
		{
			input: { a: { b: null } },
			cond: false
		},
		{
			input: { a: null },
			cond: false
		},
		{
			input: { a: { b: 3 } },
			cond: false
		}
	]
};
