crates/oxc_react_compiler/tests/snapshots/reduce-reactive-deps__jump-unpoisoned__jump-target-within-scope-loop-break.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/reduce-reactive-deps/jump-unpoisoned/jump-target-within-scope-loop-break.ts
---
import { c as _c } from "react/compiler-runtime";
function useFoo(t0) {
	const $ = _c(3);
	const { input, max } = t0;
	let x;
	if ($[0] !== input.a.b || $[1] !== max) {
		x = [];
		let i = 0;
		while (true) {
			i = i + 1;
			if (i > max) {
				break;
			}
		}
		x.push(i);
		x.push(input.a.b);
		$[0] = input.a.b;
		$[1] = max;
		$[2] = x;
	} else {
		x = $[2];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: [{
		input: { a: { b: 2 } },
		max: 8
	}],
	sequentialRenders: [
		{
			input: { a: { b: 2 } },
			max: 8
		},
		{
			input: null,
			max: 8
		},
		{
			input: {},
			max: 8
		},
		{
			input: { a: { b: null } },
			max: 8
		},
		{
			input: { a: null },
			max: 8
		},
		{
			input: { a: { b: 3 } },
			max: 8
		}
	]
};
