crates/oxc_react_compiler/tests/snapshots/reduce-reactive-deps__jump-unpoisoned__reduce-if-exhaustive-nonpoisoned-deps1.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/reduce-reactive-deps/jump-unpoisoned/reduce-if-exhaustive-nonpoisoned-deps1.ts
---
import { c as _c } from "react/compiler-runtime";
import { identity } from "shared-runtime";
function useFoo(t0) {
	const $ = _c(11);
	const { input, cond2, cond1 } = t0;
	let t1;
	let x;
	if ($[0] !== cond1 || $[1] !== cond2 || $[2] !== input.a.b) {
		t1 = Symbol.for("react.early_return_sentinel");
		bb0: {
			x = [];
			if (cond1) {
				if (!cond2) {
					let t2;
					if ($[5] !== input.a.b) {
						t2 = identity(input.a.b);
						$[5] = input.a.b;
						$[6] = t2;
					} else {
						t2 = $[6];
					}
					x.push(t2);
					t1 = null;
					break bb0;
				} else {
					let t2;
					if ($[7] !== input.a.b) {
						t2 = identity(input.a.b);
						$[7] = input.a.b;
						$[8] = t2;
					} else {
						t2 = $[8];
					}
					x.push(t2);
				}
			} else {
				let t2;
				if ($[9] !== input.a.b) {
					t2 = identity(input.a.b);
					$[9] = input.a.b;
					$[10] = t2;
				} else {
					t2 = $[10];
				}
				x.push(t2);
			}
		}
		$[0] = cond1;
		$[1] = cond2;
		$[2] = input.a.b;
		$[3] = t1;
		$[4] = x;
	} else {
		t1 = $[3];
		x = $[4];
	}
	if (t1 !== Symbol.for("react.early_return_sentinel")) {
		return t1;
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: [{
		input: { b: 1 },
		cond1: true,
		cond2: false
	}],
	sequentialRenders: [
		{
			input: { a: { b: 1 } },
			cond1: true,
			cond2: true
		},
		{
			input: null,
			cond1: true,
			cond2: false
		},
		{
			input: { a: { b: undefined } },
			cond1: true,
			cond2: true
		},
		{
			input: { a: null },
			cond1: true,
			cond2: true
		},
		{
			input: { a: { b: undefined } },
			cond1: true,
			cond2: true
		}
	]
};
