crates/oxc_react_compiler/tests/snapshots/reduce-reactive-deps__jump-unpoisoned__throw-before-scope-starts.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/reduce-reactive-deps/jump-unpoisoned/throw-before-scope-starts.ts
---
import { c as _c } from "react/compiler-runtime";
import { arrayPush } from "shared-runtime";
function useFoo(t0) {
	const $ = _c(2);
	const { input, cond } = t0;
	if (cond) {
		throw new Error("throw with error!");
	}
	let x;
	if ($[0] !== input.a.b) {
		x = [];
		arrayPush(x, input.a.b);
		$[0] = input.a.b;
		$[1] = x;
	} else {
		x = $[1];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: [{
		input: { a: { b: 2 } },
		cond: false
	}],
	sequentialRenders: [
		{
			input: null,
			cond: true
		},
		{
			input: { a: { b: 2 } },
			cond: false
		},
		{
			input: null,
			cond: true
		},
		{
			input: {},
			cond: false
		},
		{
			input: { a: { b: null } },
			cond: false
		},
		{
			input: { a: null },
			cond: false
		},
		{
			input: { a: { b: 3 } },
			cond: false
		}
	]
};
